# mcp-cli-wrappers

./: .gitignore  .gitmessage  CHANGELOG.md  CLAUDE.md  EXA.md  LLMs-SUMMARY.txt  LLMs.txt  ONBOARDING.md  QUICKSTART.md  README.md  claude-flow.py  crawl4ai.py  deepwiki.py  exa.py  flow-nexus.py  generate-all-wrappers.py  gitmcp.py  repomix.py  run_generator.py  semly.py  test-and-regenerate.sh  test-wrapper-new.py
.claude/: CLI_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  settings.json
.claude/commands/: analyze-repo.md  analyze.md  github-pr.md  new-wrapper.md  reason.md  scrape.md  search.md  test-wrapper.md  think.md
.github/: exa-completion.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
apple-docset-cli/: cli.py
brave-search-cli/: .env.example  .gitignore  CLAUDE.md  README.md  cli.py
brave-search-cli/tests/: conftest.py  test_cli.py
docs/architecture/: cli-wrappers-architecture.md
firecrawl-cli/: .env.example  .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml
firecrawl-cli/tests/: __init__.py  conftest.py  test_cli.py
github-cli/: .env.example  .gitignore  CLAUDE.md  README.md  cli.py
github-cli/tests/: test_cli.py
llm-docs/: llm.architecture.txt  llm.code-analysis.txt  llm.development.txt  llm.orchestration.txt  llm.scraping.txt  llm.search.txt  llm.txt  llm.version.txt
perplexity-cli/: .env.example  CLAUDE.md  README.md  cli.py
ref-cli/: .env.example  .gitignore  CLAUDE.md  README.md  cli.py
ref-cli/tests/: test_cli.py  test_integration.py
sequential-thinking-cli/: .env.example  .gitignore  CLAUDE.md  README.md  cli.py
sequential-thinking-cli/tests/: __init__.py  test_cli.py  test_integration.py
tavily-cli/: .env.example  .gitignore  CLAUDE.md  README.md  cli.py
templates/: wrapper.jinja2
xcode-cli/: .env.example  .gitignore  CLAUDE.md  README.md  cli.py
xcode-cli/tests/: __init__.py  test_cli.py  (+1 more)
